--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ subtitle: '别怕路长梦远，总有星河照耀'
 description: '欢迎来到墨白的知识小屋，这里你可以阅读我的学习笔记并提出独到的见解~我们将互相学习交流知识，共同进步'
 keywords:
 author: 墨白
-language: zh
+language: zh-CN
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://zhai-xing.github.io/hexo-blog
 permalink: :year/:hash.html
 permalink_defaults:
 pretty_urls:
