--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ theme: shoka
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: git@github.com:zhai-xing/hexo-blog.git
+  repo: https://github.com/zhai-xing/hexo-blog.git
   branch: master
 
 # 全局搜索
