--- a/.github/workflows/blog-deploy.yml
+++ b/.github/workflows/blog-deploy.yml
@@ -1,39 +1,50 @@
-name: Deploy hexo blog
-env:
-  HEXO_STRICT: "false"
+name: Deploy Hexo Blog
 on:
   push:
-    branches:
-      - "master"
+    branches: [ "master" ]
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      # 1. 检出代码（包含子模块）
       - uses: actions/checkout@v3
         with:
-          ref: "master"
+          submodules: recursive  # 确保主题子模块被拉取
+          fetch-depth: 0
 
-      - name: Setup node
+      # 2. 设置 Node.js 环境
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "18"
+          cache: "npm"  # 启用 npm 缓存
 
-      - name: Setup yarn & Install node_modules
-        uses: borales/actions-yarn@v3.0.0
-        with:
-          cmd: install
-
-      - name: Check yarn & node version
+      # 3. 安装 Hexo CLI 和依赖
+      - name: Install dependencies
         run: |
-          echo "Node version is `node -v`"
-          echo "Yarn version is `yarn -v`"
+          npm install -g hexo-cli  # 全局安装 Hexo
+          npm install  # 安装项目依赖
 
+      # 4. 检查环境版本
+      - name: Check versions
+        run: |
+          echo "Node.js: $(node -v)"
+          echo "npm: $(npm -v)"
+          echo "Hexo: $(hexo -v)"
+          git submodule status  # 检查主题子模块状态
+
+      # 5. 构建和部署
       - name: Build & Deploy
         run: |
-          git config --global user.name "GitHub Action"
-          git config --global user.email "action@github.com"
+          # 配置 Git 身份
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          
+          # 替换部署地址为 HTTPS + Token
           sed -i'' "s~git@github.com:~https://${{ secrets.GH_TOKEN }}@github.com/~" _config.yml
-          rm -rf .deploy_git
-          yarn clean
-          yarn build
-          yarn deploy
+          
+          # Hexo 清理、生成和部署
+          hexo clean
+          hexo generate
+          hexo deploy
