--- a/.github/workflows/blog-deploy.yml
+++ b/.github/workflows/blog-deploy.yml
@@ -4,47 +4,41 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      # 1. 检出代码（包含子模块）
+      # 1. 检出代码（强制初始化子模块）
       - uses: actions/checkout@v3
         with:
-          submodules: recursive  # 确保主题子模块被拉取
+          submodules: recursive
           fetch-depth: 0
 
-      # 2. 设置 Node.js 环境
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      # 2. 设置 Node.js 18 环境（含 npm 缓存）
+      - uses: actions/setup-node@v3
         with:
           node-version: "18"
-          cache: "npm"  # 启用 npm 缓存
+          cache: npm
 
-      # 3. 安装 Hexo CLI 和依赖
+      # 3. 安装依赖（全局 hexo + 项目依赖）
       - name: Install dependencies
         run: |
-          npm install -g hexo-cli  # 全局安装 Hexo
-          npm install  # 安装项目依赖
+          npm install -g hexo-cli --silent
+          npm ci --omit=optional
 
-      # 4. 检查环境版本
-      - name: Check versions
-        run: |
-          echo "Node.js: $(node -v)"
-          echo "npm: $(npm -v)"
-          echo "Hexo: $(hexo -v)"
-          git submodule status  # 检查主题子模块状态
-
-      # 5. 构建和部署
+      # 4. 构建部署
       - name: Build & Deploy
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           # 配置 Git 身份
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          
-          # 替换部署地址为 HTTPS + Token
-          sed -i'' "s~git@github.com:~https://${{ secrets.GH_TOKEN }}@github.com/~" _config.yml
-          
-          # Hexo 清理、生成和部署
-          hexo clean
-          hexo generate
-          hexo deploy
+
+          # 自动修复部署配置
+          sed -i'' "s~git@github.com:~https://${GH_TOKEN}@github.com/~" _config.yml
+          sed -i'' "s~https://github.com/~https://${GH_TOKEN}@github.com/~" _config.yml
+
+          # 强制清理并部署
+          rm -rf .deploy_git public
+          hexo clean && hexo generate --debug
+          hexo deploy --verbose
