--- a/.github/workflows/blog-deploy.yml
+++ b/.github/workflows/blog-deploy.yml
@@ -1,39 +1,49 @@
-name: Deploy hexo blog
+name: Deploy Hexo Blog
+
 env:
   HEXO_STRICT: "false"
+
 on:
   push:
     branches:
-      - "master"
+      - master
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
         with:
-          ref: "master"
+          ref: master
 
-      - name: Setup node
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: 18
 
-      - name: Setup yarn & Install node_modules
-        uses: borales/actions-yarn@v3.0.0
-        with:
-          cmd: install
+      - name: Install dependencies
+        run: npm install
 
-      - name: Check yarn & node version
+      - name: Check Node.js and npm versions
         run: |
-          echo "Node version is `node -v`"
-          echo "Yarn version is `yarn -v`"
+          echo "Node version: $(node -v)"
+          echo "npm version: $(npm -v)"
 
-      - name: Build & Deploy
+      - name: Configure Git
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
-          sed -i'' "s~git@github.com:~https://${{ secrets.GH_TOKEN }}@github.com/~" _config.yml
-          rm -rf .deploy_git
-          yarn clean
-          yarn build
-          yarn deploy
+
+      - name: Replace repository URL in config
+        run: |
+          sed -i "s~git@github.com:~https://${{ secrets.GH_TOKEN }}@github.com/~" _config.yml
+
+      - name: Clean previous build
+        run: npx hexo clean
+
+      - name: Generate static files
+        run: npx hexo generate
+
+      - name: Deploy Hexo blog
+        run: npx hexo deploy    
