--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server",
-    "prepare": "husky install"
+    "server": "hexo server"
   },
   "hexo": {
     "version": "7.3.0"
@@ -30,8 +29,5 @@
     "hexo-server": "^3.0.0",
     "hexo-symbols-count-time": "^0.7.1",
     "hexo-theme-landscape": "^1.0.0"
-  },
-  "devDependencies": {
-    "husky": "^9.1.7"
   }
 }
