--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://zhai-xing.github.io/hexo-blog
+url: https://zhai-xing.github.io
 permalink: :year/:hash.html
 permalink_defaults:
 pretty_urls:
